<resources>
    <string name="app_name">Best Excuse Ever</string>
    <string name="sendHint">Message à envoyer</string>
    <string name="send">Envoyer</string>
    <string name="ask">Demande de bees</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="passwordHint">Mot de passe</string>
    <string name="accountHint">Nom de compte</string>
    <string name="sign_in">Connexion</string>
    <string name="sign_up">Inscription</string>
    <string name="action_write_bee">Écrire une Bee</string>
    <string name="action_profile">Profil</string>
    <string name="action_login">Connexion</string>
    <string name="title_activity_bee">BeeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Connexion</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="no_address_found">Pas d\'adresse trouvée</string>
    <string name="address_found">L\'adresse a été trouvée</string>
    <string name="card_transition">transition</string>
    <string name="new_bee_notification_title">Une nouvelle BEE a été ajouté!</string>
    <string name="new_bee_notification_content">Consultez tout de suite cette BEE</string>
    <string name="comment_hint">Commentaire</string>
    <string name="locationHint">Localisation</string>

</resources>
